Framework: Forward port Long press back to kill app (2/2)
Change-Id: Ia88d8a2753e203afb8d6117a643c33127f991c4a

Fw_base - Long press back to kill configurable timeout [1/2]

Forward ported from crDroid sources:
https://github.com/crdroidandroid/android_frameworks_base/commit/8db5514bcc6feaeeb6aee66fea9b082b7a59237f

Change-Id: Ib1347f04153088266074629054c071f9cba74154

Fw_base - Move KILL_APP_LONGPRESS_TIMEOUT to Settings.Secure

Change-Id: Id0fafc0066bf2d173a51071f647721ac2132c8fb

--- a/core/res/res/values/cm_strings.xml
+++ b/core/res/res/values/cm_strings.xml
@@ -160,4 +160,7 @@
 
     <!-- Notify user that they are in Lock-to-app (for devices without navbar) -->
     <string name="lock_to_app_toast_no_navbar">To unpin this screen, touch and hold the Back button.</string>
+
+    <!-- Long-press back kill application -->
+    <string name="app_killed_message">Application killed</string>
 </resources>
