--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2707,11 +2707,14 @@
   <java-symbol type="string" name="power_key_emergency_number" />
   <java-symbol type="integer" name="power_key_hits_emergency" />
   <java-symbol type="bool" name="config_emergencyCallOnPowerkeyTapGestureEnabled" />
-  <java-symbol type="bool" name="config_usb_data_unlock" />
+  <java-symbol type="bool" name="config_usb_data_unlock" /> <<<<<<< HEAD
   <java-symbol type="bool" name="config_volte_preferred" />
 
   <!-- Last app switch animations -->
   <java-symbol type="anim" name="last_app_in" />
   <java-symbol type="anim" name="last_app_out" />
+
+  <!-- Vendor warning -->
+  <java-symbol type="string" name="system_error_vendorprint" />
 
 </resources>
