--- a/packages/SystemUI/res/values/aokp_strings.xml
+++ b/packages/SystemUI/res/values/aokp_strings.xml
@@ -75,4 +75,10 @@
     <string name="quick_settings_themes_default_theme">Default</string>
     <string name="quick_settings_themes_match_system">Match system theme</string>
 
+    <!-- PA Pie controls -->
+    <string name="pie_date_format">ccc, dd MMM yyyy</string>
+    <string name="pie_hour_format_12">hh:mm</string>
+    <string name="pie_hour_format_24">HH:mm</string>
+    <string name="pie_am_pm">a</string>
+
 </resources>
